@startuml

class App{
    ArrayList<String> namesList
    String fileName
    String outputFile
    int size

    sort list
    print output
}

class CreateList {

    + readLine(File)
    - addName(ArrayList)
}

class Calculations {
    + alphabetize(ArrayList)
    + getSize(ArrayList)
}

class generateOutput {
    + toFile(ArrayList, outFile, int num)
    - writeToFile(outfile, num, nameList) // helper for toFIle()
    + consoleString(numNames, names)

    + numNames(names) // header
    + divider()
    + list(names) // String of entire lsit
}

App o--> CreateList
CreateList o-> Calculations
Calculations o--> generateOutput
@enduml